test/corpus/core.txt
========================================================================
Ordinary and locals definitions
========================================================================

: square ( x -- y ) dup * ;
:: add2 ( a b c -- x y ) a b + c ;

---

(source_file (word_defn (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word) (word))) (word_defn (name) (stack_effect (effect (effect_parameter (name)) (effect_parameter (name)) (effect_parameter (name))) (effect (effect_parameter (name)) (effect_parameter (name)))) (expression (word) (word) (word) (word))))

========================================================================
Empty definition and effects
========================================================================

: noop ( -- ) ;
: produce ( -- result ) 1 ;
: consume ( value -- ) drop ;

---

(source_file (word_defn (name) (stack_effect)) (word_defn (name) (stack_effect (effect (effect_parameter (name)))) (expression (number))) (word_defn (name) (stack_effect (effect (effect_parameter (name)))) (expression (word))))

========================================================================
Macro memo and typed definitions
========================================================================

MACRO: m ( -- quot ) [ 1 ] ;
MACRO:: ml ( a -- quot ) a ;
MEMO: fib ( n -- n ) dup ;
IDENTITY-MEMO:: cached ( key -- value ) key ;
TYPED:: twice ( x: integer -- y: integer ) x 2 * ;

---

(source_file (word_defn (name) (stack_effect (effect (effect_parameter (name)))) (expression (quotation (expression (number))))) (word_defn (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word))) (word_defn (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word))) (word_defn (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word))) (word_defn (name) (stack_effect (effect (effect_parameter (name) (word))) (effect (effect_parameter (name) (word)))) (expression (word) (number) (word))))

========================================================================
Method definitions
========================================================================

M: integer describe number>string ;
M:: integer add ( x y -- z ) x y + ;

---

(source_file (method_defn (name) (name) (expression (word))) (method_defn (name) (name) (stack_effect (effect (effect_parameter (name)) (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word) (word) (word))))

========================================================================
Generic declarations
========================================================================

GENERIC: draw ( object -- )
GENERIC#: choose 1 ( x y -- z )
MATH: plus ( x y -- z )
PRIMITIVE: vm-op ( -- )
HOOK: process current-backend ( x -- y )

---

(source_file (generic_defn (name) (stack_effect (effect (effect_parameter (name))))) (generic_defn (name) (number) (stack_effect (effect (effect_parameter (name)) (effect_parameter (name))) (effect (effect_parameter (name))))) (generic_defn (name) (stack_effect (effect (effect_parameter (name)) (effect_parameter (name))) (effect (effect_parameter (name))))) (generic_defn (name) (stack_effect)) (generic_defn (name) (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name))))))

========================================================================
Parsing word definition and delimiter names
========================================================================

SYNTAX: [ \ ] parse-until ;
SYNTAX: " parse-string suffix! ;
: < ( x y -- ? ) compare ;

---

(source_file (syntax_defn (name) (expression (word_literal (name)) (word))) (syntax_defn (name) (expression (word) (word))) (word_defn (name) (stack_effect (effect (effect_parameter (name)) (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word))))

========================================================================
Imports
========================================================================

USING: kernel math ;
USING: ;
IN: demo
USE: sequences
UNUSE: sequences
REUSE: demo
QUALIFIED: math
QUALIFIED-WITH: sequences seq
FROM: math => + - ;
EXCLUDE: kernel => drop ;
RENAME: + math => plus

---

(source_file (import_defn (name) (name)) (import_defn) (import_defn (name)) (import_defn (name)) (import_defn (name)) (import_defn (name)) (import_defn (name)) (import_defn (name) (name)) (import_defn (name) (name) (name)) (import_defn (name) (name)) (import_defn (name) (name) (name)))

========================================================================
Tuple slots and inheritance
========================================================================

TUPLE: point < base x y ;
ERROR: bad-input value ;
TUPLE: typed { x integer initial: 0 read-only } { y initial: { 1 2 } } ;
TUPLE: empty ;

---

(source_file (tuple_defn (name) (name) (name) (name)) (tuple_defn (name) (name)) (tuple_defn (name) (slot (name) (name) (slot_attribute (number)) (slot_attribute)) (slot (name) (slot_attribute (array (collection_start) (number) (number))))) (tuple_defn (name)))

========================================================================
Classes predicates and instances
========================================================================

MIXIN: drawable
SINGLETON: red
SINGLETONS: green blue ;
UNION: numeric integer float ;
INTERSECTION: composite a b ;
PREDICATE: positive < integer 0 > ;
INSTANCE: point drawable
C: <point> point

---

(source_file (class_defn (name)) (class_defn (name)) (class_defn (name) (name)) (class_defn (name) (name) (name)) (class_defn (name) (name) (name)) (predicate_defn (name) (name) (expression (number) (word))) (instance_defn (name) (name)) (constructor_defn (name) (name)))

========================================================================
Symbols constants aliases and deferred words
========================================================================

SYMBOL: current-color
SYMBOLS: left right ;
SLOT: value
CONSTANT: greeting "hello world"
CONSTANT: pairs H{ { "x" 1 } }
INITIALIZED-SYMBOL: cache V{ }
ALIAS: plus +
DEFER: later

---

(source_file (symbol_defn (name)) (symbol_defn (name) (name)) (symbol_defn (name)) (constant_defn (name) (string)) (constant_defn (name) (array (collection_start) (array (collection_start) (string) (number)))) (constant_defn (name) (array (collection_start))) (alias_defn (name) (name)) (deferred_defn (name)))

========================================================================
Main and lifecycle hooks
========================================================================

MAIN: main
MAIN: [ "hello" print ]
STARTUP-HOOK: [ initialize ]
SHUTDOWN-HOOK: cleanup

---

(source_file (main_defn (word)) (main_defn (quotation (expression (string) (word)))) (main_defn (quotation (expression (word)))) (main_defn (word)))

========================================================================
Private and compile-time sections
========================================================================

<PRIVATE
: helper ( -- ) ;
PRIVATE>
<< USE: math : bootstrap ( -- ) ; >>

---

(source_file (private_section (word_defn (name) (stack_effect))) (compile_time (import_defn (name)) (word_defn (name) (stack_effect))))

========================================================================
Definition properties
========================================================================

: identity ( x -- x ) ; inline flushable foldable
: fact ( n -- n ) dup ; recursive
SYNTAX: END ; delimiter deprecated
TUPLE: closed ; final

---

(source_file (word_defn (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name))))) (declaration) (declaration) (declaration) (word_defn (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word))) (declaration) (syntax_defn (name)) (declaration) (declaration) (tuple_defn (name)) (declaration))

========================================================================
Unicode and punctuation in names
========================================================================

IN: café
: λ ( α -- β ) α→β ;
foo! foo:bar (clone) +@ 2dup 1array

---

(source_file (import_defn (name)) (word_defn (name) (stack_effect (effect (effect_parameter (name))) (effect (effect_parameter (name)))) (expression (word))) (word) (word) (word) (word) (word) (word))
