test/corpus/errors.txt
========================================================================
Unclosed quotation
========================================================================

[ 1 2

---

(ERROR (expression (number) (number)))

========================================================================
Unclosed array
========================================================================

{ 1 2

---

(source_file (array (collection_start) (number) (number) (MISSING "}")))

========================================================================
Unclosed string
========================================================================

"unterminated

---

(source_file (ERROR (UNEXPECTED '"')) (word))

========================================================================
Unclosed raw string
========================================================================

[=[ unterminated

---

(ERROR (expression (word) (word)))

========================================================================
Missing definition terminator
========================================================================

: broken ( -- ) 1

---

(source_file (ERROR (name) (stack_effect) (number)))

========================================================================
Missing effect separator
========================================================================

: broken ( x y ) dup ;

---

(source_file (ERROR (name) (effect (effect_parameter (name)) (effect_parameter (name))) (UNEXPECTED 'u')))

========================================================================
Unmatched closing delimiter
========================================================================

]

---

(source_file (ERROR))
